feat : code for process image(align,crop,patch) & valid code for dataset

--- a/data/make_patch.ipynb
+++ b/data/make_patch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f007ab0b-a210-4c75-928a-905760041039",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,13 @@
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]= \"2\"  # Set the GPU 1 to use\n",
     "from core.data_loader import sem_generator,patch_generator, load_whole_image\n",
     "from core.crop_image import scale_f_num_0to3,crop_image, make_image_crop\n",
-    "from core.utils import seed_everything"
+    "from core.utils import seed_everything\n",
+    "from core.patch_generate import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "068ba547-386a-4ea3-9f54-21d3e4de232d",
    "metadata": {},
    "outputs": [],
@@ -41,100 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "26559bf7-0ffa-4b3f-b923-a674eb2e74a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path=\"./Samsung_SNU_1536x3072\"\n",
+    "data_path=\"./Samsung_SNU_1474x3010_aligned\"\n",
     "crop_data_path=\"./Samsung_SNU_cropped\"\n",
     "os.makedirs(crop_data_path,exist_ok=True)\n",
-    "random_crop = torchvision.transforms.RandomCrop(size=256)\n",
+    "# random_crop = torchvision.transforms.RandomCrop(size=256)\n",
     "crop_size = 256\n",
     "# for test, make just 2 crop image\n",
-    "num_crop= 2 #500\n",
-    "\n",
-    "def show_patch(crop_im):\n",
-    "    crop_im = crop_im.permute(1,2,0).cpu().numpy()\n",
-    "    crop_im = crop_im.astype('uint8')\n",
-    "    PIL.Image.fromarray(crop_im)\n",
-    "def read_image_and_crop(image : np.array, target : np.array):\n",
-    "    im_t,target_im_t = torch.Tensor(image).cuda(), torch.Tensor(target).cuda()\n",
-    "    top = random.randrange(0,image.shape[0]-crop_size)\n",
-    "    left = random.randrange(0,image.shape[1]-crop_size)\n",
-    "    crop_im = torchvision.transforms.functional.crop(im_t,top,left, crop_size,crop_size)\n",
-    "    crop_target_im = torchvision.transforms.functional.crop(target_im_t,top,left, crop_size,crop_size)\n",
-    "    \n",
-    "    return crop_im,crop_target_im"
+    "num_crop= 2 #500\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f99bf301-956a-4eb1-80d6-eda32708e53d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'in <string>' requires string as left operand, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSET1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "4af4d248-ce61-4f02-9e88-e2cd37a071f2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def return_val_test_index():\n",
-    "    random_seed = random.randint(0,2**32-1)\n",
-    "    seed_everything(random_seed)\n",
-    "    val_image_index = random.randint(0,15)\n",
-    "    test_image_index = random.randint(0,15)\n",
-    "    while val_image_index == test_image_index:\n",
-    "        test_image_index = random.randint(0,15)\n",
-    "    return (val_image_index, test_image_index)\n",
-    "def make_patch_of_image(image_path):\n",
-    "    noisy_patch = torch.Tensor(num_crop,256,256).cuda() \n",
-    "    target_patch = torch.Tensor(num_crop,256,256).cuda() \n",
-    "    \n",
-    "    image_num = image_path.split(\"_\")[-1]\n",
-    "    clean_path = os.path.join(data_path,set_num,f\"F64_{image_num}\")\n",
-    "    #print(image_num, clean_path)\n",
-    "    im = cv2.imread(image_path,cv2.IMREAD_GRAYSCALE)\n",
-    "    target_im = cv2.imread(clean_path,cv2.IMREAD_GRAYSCALE)\n",
-    "    im, target_im = im/255. ,target_im / 255.\n",
-    "    #patch_save_path = os.path.join(crop_data_path,set_num,image_name)\n",
-    "\n",
-    "    for index in range(num_crop):\n",
-    "        im_cropped, target_im_cropped = read_image_and_crop(im,target_im)\n",
-    "        noisy_patch[index],target_patch[index] = im_cropped,target_im_cropped\n",
-    "    return noisy_patch,target_patch\n",
-    "def append_tensor(original,new):\n",
-    "    if original is None:\n",
-    "        original = new\n",
-    "    else :\n",
-    "        original = torch.cat((original, new),axis=0)\n",
-    "    return original\n",
-    "def save_to_hdf5(noisy_patch, target_patch,set_num :int ,type_name : str):\n",
-    "    if type_name not in ['train','val','test']:\n",
-    "        print(\"error in type_name\")\n",
-    "        sys.exit(-1)\n",
-    "    noisy_patch, target_patch = noisy_patch.cpu().numpy(), target_patch.cpu().numpy()\n",
-    "    with h5py.File(f\"{type_name}_Samsung_SNU_patches_{set_num}.hdf5\",\"w\") as f:\n",
-    "        f.create_dataset(\"noisy_images\", noisy_patch.shape, dtype='f', data=noisy_patch)\n",
-    "        f.create_dataset(\"clean_images\", target_patch.shape, dtype='f', data=target_patch)\n",
-    "    gc.collect()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -197,7 +133,7 @@
     "            # print(image_idx,image_path)\n",
     "            start_idx = i * num_crop\n",
     "            end_idx = (i+1) * num_crop\n",
-    "            noisy, target = make_patch_of_image(image_path)\n",
+    "            noisy, target = make_patch_of_image(data_path,image_path,num_crop)\n",
     "            if image_idx == val_index:\n",
     "                #print(f\"This is val image\")\n",
     "                val_noisy_patch = append_tensor(val_noisy_patch,noisy)\n",
