--- a/data/make_patch.ipynb
+++ b/data/make_patch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f007ab0b-a210-4c75-928a-905760041039",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,27 @@
    "source": [
     "#seed = 0\n",
     "#seed_everything(seed) # Seed 고정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "adbaa32a-9bb3-4b9b-996e-a896d2daf307",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22000, 256, 256)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"train_Samsung_SNU_patches_SET7.hdf5\",'r') as f:\n",
+    "    # print(f)\n",
+    "    noisy_images = np.array(f['noisy_images'])\n",
+    "print(noisy_images.shape)"
    ]
   },
   {
@@ -381,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
