feat: CD measurement process

--- a/denoise_and_get_CD/median_filter_baseline.ipynb
+++ b/denoise_and_get_CD/median_filter_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "725b06bb-08ef-4e3f-aa62-f0b9287f441b",
    "metadata": {},
    "outputs": [],
@@ -11,93 +11,198 @@
     "import h5py\n",
     "import cv2\n",
     "import os, sys\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"3\" # \"0,1,2,3\" # \"0\"\n",
     "import matplotlib.pyplot as plt\n",
     "from copy import deepcopy\n",
-    "from scipy.ndimage import median_filter\n",
+    "from core.median_filter import apply_median_filter_gpu_simple\n",
+    "from core.CD_measure import *\n",
     "from skimage.metrics import *\n",
     "from skimage.metrics import peak_signal_noise_ratio as psnr\n",
     "from skimage.metrics import structural_similarity as ssim\n",
+    "import json\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "09327c40-a1a2-41a4-a5de-d6a869d074bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "peak_signal_noise_ratio?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44eeecf5-9767-43de-9dc0-277915cb746f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls ../data/val_Samsung_SNU_patches_SET7_divided_by_fnum.hdf5\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd863bfe-3a2f-40bc-95e9-9a3b19d2de17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "samsung_images = {}\n",
-    "with h5py.File(\"../data/val_Samsung_SNU_patches_SET7_divided_by_fnum.hdf5\", 'r') as f:\n",
-    "    f1_images = np.array(f['F1'])\n",
-    "    f2_images = np.array(f['F2'])\n",
-    "    f4_images = np.array(f['F4'])\n",
-    "    f8_images = np.array(f['F8'])\n",
-    "    f16_images = np.array(f['F16'])\n",
-    "    f32_images = np.array(f['F32'])\n",
-    "    f64_images = np.array(f['F64'])\n",
-    "    for f_num in ['F1', 'F2', 'F4', 'F8', 'F16', 'F32', 'F64']:\n",
-    "        samsung_images[f_num] = np.array(f[f_num])"
+    "# samsung_images = {}\n",
+    "# with h5py.File(\"../data/val_Samsung_SNU_patches_SET7_divided_by_fnum.hdf5\", 'r') as f:\n",
+    "#     f1_images = np.array(f['F1'])\n",
+    "#     f2_images = np.array(f['F2'])\n",
+    "#     f4_images = np.array(f['F4'])\n",
+    "#     f8_images = np.array(f['F8'])\n",
+    "#     f16_images = np.array(f['F16'])\n",
+    "#     f32_images = np.array(f['F32'])\n",
+    "#     f64_images = np.array(f['F64'])\n",
+    "#     for f_num in ['F1', 'F2', 'F4', 'F8', 'F16', 'F32', 'F64']:\n",
+    "#         samsung_images[f_num] = np.array(f[f_num])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b3ef1b9-5e2e-4236-8b88-f44f765b6585",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for key,item in samsung_images.items():\n",
-    "    print(key,item.shape)"
+    "# for key,item in samsung_images.items():\n",
+    "#     print(key,item.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0add1f21-b82d-46fb-bced-3e2ba1861903",
+   "execution_count": 4,
+   "id": "f78cde0d-4849-4928-acec-d11af408ce37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_median_filter(img : np.array ,kernel_size  : tuple = (11,11), repeat: int =3 ,plot : bool =False):\n",
-    "    out = deepcopy(img)\n",
-    "    if plot is True:\n",
-    "        plt.title(f'before iter')\n",
-    "        plt.imshow(out[:200,:200])\n",
-    "        plt.pause(0.01)\n",
-    "        plt.figure(figsize=(20,4))\n",
-    "        plt.plot(out[50][:200])\n",
-    "        plt.pause(0.01)\n",
-    "    for i in range(repeat):\n",
-    "        out = median_filter(out,kernel_size)\n",
-    "        if plot is True:\n",
-    "            plt.title(f'{i+1} iter')\n",
-    "            plt.imshow(out[:200,:200])\n",
-    "            plt.pause(0.01)\n",
-    "            plt.figure(figsize=(20,4))\n",
-    "            plt.plot(out[50][:200])\n",
-    "            plt.pause(0.01)\n",
-    "    return out"
+    "pad = 150\n",
+    "noisy_f_num_list = ['F01', 'F02', 'F04', 'F08']\n",
+    "CD_dict ={}\n",
+    "target = 'F16_v2'\n",
+    "with open(f'./result_data/hole_info_{target}.txt', 'r') as f:\n",
+    "    hole_info = json.load(f)\n",
+    "def return_img(img_dict): \n",
+    "    img_info = {}\n",
+    "    for set_num in img_dict.keys():\n",
+    "        for f_num in img_dict[set_num].keys():\n",
+    "            for idx,img in enumerate(img_dict[set_num][f_num]):\n",
+    "                img_info = {'set_num' : set_num, 'f_num' : f_num, 'idx' : idx}\n",
+    "                yield img_info, img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "53339ffc-16ab-43fd-90c7-76f6455bb72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_dict = np.load(\"./intermediate_result/full_img_dict.npy\",allow_pickle=True).item()\n",
+    "CD_dict = {}\n",
+    "collect_metric_list = [\"avg_min_CD\", \"avg_max_CD\"]\n",
+    "\n",
+    "method_list = [\"median\"]\n",
+    "print_img,save_img = False, False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "39eda5c9-ecc8-40f3-ac74-4ecae70bf061",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "for img_info, img in return_img(img_dict):\n",
+    "    if img_info['set_num'] != 'SET05'  and img_info['idx'] != 0 or img_info['f_num'] != 'F32':\n",
+    "        continue\n",
+    "\n",
+    "    print(img_info, img.shape) # (1,x,y)\n",
+    "    set_num, f_num, idx = img_info[\"set_num\"], img_info[\"f_num\"], img_info[\"idx\"]\n",
+    "    key = f'{img_info[\"set_num\"]}_{img_info[\"f_num\"]}_{img_info[\"idx\"]:02d}'\n",
+    "    img_hole_info = hole_info[set_num]['F08'][idx]\n",
+    "    CD_dict[key] = {}\n",
+    "    for method in method_list:\n",
+    "        target_model = apply_median_filter_gpu_simple\n",
+    "        print(f\"===== {method}  CD measure =====\")\n",
+    "        CD_info_ours = CD_process(target_model, img, img_info, img_hole_info, pad,print_img,save_img)\n",
+    "        CD_dict = get_metric(CD_dict, CD_info_ours,key, collect_metric_list, method)\n",
+    "    if img_info['set_num'] == 'SET02':\n",
+    "        break\n",
+    "        print(CD_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bcaaa62a-a8d1-4952-9c5b-58c27961fa4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CD_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bd5cae9f-abc6-4775-8e85-bb8a91b45474",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'set_num': 'SET01', 'f_num': 'F08', 'idx': 0} (1, 1474, 3010)\n",
+      "{'set_num': 'SET01', 'f_num': 'F16', 'idx': 0} (1, 1474, 3010)\n",
+      "{'set_num': 'SET01', 'f_num': 'F32', 'idx': 0} (1, 1474, 3010)\n",
+      "{'set_num': 'SET01', 'f_num': 'F64', 'idx': 0} (1, 1474, 3010)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for img_info, img in return_img(img_dict):\n",
+    "    if img_info['set_num'] != 'SET05' and img_info['idx'] != 0:\n",
+    "        continue\n",
+    "    \n",
+    "    print(img_info, img.shape) # (1,x,y)\n",
+    "    set_num, f_num, idx = img_info[\"set_num\"], img_info[\"f_num\"], img_info[\"idx\"]\n",
+    "    key = f'{img_info[\"set_num\"]}_{img_info[\"f_num\"]}_{img_info[\"idx\"]:02d}'\n",
+    "    img_hole_info = hole_info[set_num]['F08'][idx]\n",
+    "    \n",
+    "    save_hole_img(img,img_info, img_hole_info,pad)\n",
+    "    if img_info['f_num'] == 'F64':\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d93a76da-9aaf-42f9-abb2-ee81055b1c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "-1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m -1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/ssd/hyun/fbi-net/env/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3406: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys.exit(-1)"
    ]
   },
   {
@@ -121,123 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "280800df-115c-4fcb-895f-435fce7b8631",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0morient\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'columns'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdtype\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Dtype | None'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'DataFrame'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Construct DataFrame from dict of array-like or dicts.\n",
-       "\n",
-       "Creates DataFrame object from dictionary by columns or by index\n",
-       "allowing dtype specification.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "data : dict\n",
-       "    Of the form {field : array-like} or {field : dict}.\n",
-       "orient : {'columns', 'index', 'tight'}, default 'columns'\n",
-       "    The \"orientation\" of the data. If the keys of the passed dict\n",
-       "    should be the columns of the resulting DataFrame, pass 'columns'\n",
-       "    (default). Otherwise if the keys should be rows, pass 'index'.\n",
-       "    If 'tight', assume a dict with keys ['index', 'columns', 'data',\n",
-       "    'index_names', 'column_names'].\n",
-       "\n",
-       "    .. versionadded:: 1.4.0\n",
-       "       'tight' as an allowed value for the ``orient`` argument\n",
-       "\n",
-       "dtype : dtype, default None\n",
-       "    Data type to force, otherwise infer.\n",
-       "columns : list, default None\n",
-       "    Column labels to use when ``orient='index'``. Raises a ValueError\n",
-       "    if used with ``orient='columns'`` or ``orient='tight'``.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "DataFrame\n",
-       "\n",
-       "See Also\n",
-       "--------\n",
-       "DataFrame.from_records : DataFrame from structured ndarray, sequence\n",
-       "    of tuples or dicts, or DataFrame.\n",
-       "DataFrame : DataFrame object creation using constructor.\n",
-       "DataFrame.to_dict : Convert the DataFrame to a dictionary.\n",
-       "\n",
-       "Examples\n",
-       "--------\n",
-       "By default the keys of the dict become the DataFrame columns:\n",
-       "\n",
-       ">>> data = {'col_1': [3, 2, 1, 0], 'col_2': ['a', 'b', 'c', 'd']}\n",
-       ">>> pd.DataFrame.from_dict(data)\n",
-       "   col_1 col_2\n",
-       "0      3     a\n",
-       "1      2     b\n",
-       "2      1     c\n",
-       "3      0     d\n",
-       "\n",
-       "Specify ``orient='index'`` to create the DataFrame using dictionary\n",
-       "keys as rows:\n",
-       "\n",
-       ">>> data = {'row_1': [3, 2, 1, 0], 'row_2': ['a', 'b', 'c', 'd']}\n",
-       ">>> pd.DataFrame.from_dict(data, orient='index')\n",
-       "       0  1  2  3\n",
-       "row_1  3  2  1  0\n",
-       "row_2  a  b  c  d\n",
-       "\n",
-       "When using the 'index' orientation, the column names can be\n",
-       "specified manually:\n",
-       "\n",
-       ">>> pd.DataFrame.from_dict(data, orient='index',\n",
-       "...                        columns=['A', 'B', 'C', 'D'])\n",
-       "       A  B  C  D\n",
-       "row_1  3  2  1  0\n",
-       "row_2  a  b  c  d\n",
-       "\n",
-       "Specify ``orient='tight'`` to create the DataFrame using a 'tight'\n",
-       "format:\n",
-       "\n",
-       ">>> data = {'index': [('a', 'b'), ('a', 'c')],\n",
-       "...         'columns': [('x', 1), ('y', 2)],\n",
-       "...         'data': [[1, 3], [2, 4]],\n",
-       "...         'index_names': ['n1', 'n2'],\n",
-       "...         'column_names': ['z1', 'z2']}\n",
-       ">>> pd.DataFrame.from_dict(data, orient='tight')\n",
-       "z1     x  y\n",
-       "z2     1  2\n",
-       "n1 n2\n",
-       "a  b   1  3\n",
-       "   c   2  4\n",
-       "\u001b[0;31mFile:\u001b[0m      /mnt/ssd/hyun/fbi-net/env/lib/python3.9/site-packages/pandas/core/frame.py\n",
-       "\u001b[0;31mType:\u001b[0m      method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "pd.DataFrame.from_dict?"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "7331bd9f-0136-422b-af49-88918f68d289",
+   "id": "7c7aea6d-898a-4b89-8a95-f0e54eee3300",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "images_denoised_with_median_filter = {}"
-   ]
+   "source": []
   }
  ],
  "metadata": {
