feat: update denoising result code, make train_n2n

--- a/denoise_and_get_CD/get_img_denoising_patch_fivek1.ipynb
+++ b/denoise_and_get_CD/get_img_denoising_patch_fivek1.ipynb
@@ -471,6 +471,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsing_weight_name(fbi_weight_dir):\n",
+    "    target_y = fbi_weight_dir.split(\"_y_as_\")[1][:3]\n",
+    "    if \"x_as_\" in fbi_weight_dir:\n",
+    "        target_x = fbi_weight_dir.split(\"x_as_\")[1][:3]\n",
+    "        print(target_x)\n",
+    "        if 'F#' in target_x:\n",
+    "            target_x = \"F#\"\n",
+    "    else :\n",
+    "        target_x = \"F#\"\n",
+    "    dataset_version = 'v1' if 'with_SET01020304' in fbi_weight_dir else 'v2'\n",
+    "    if \"l1_on_img_gradient\" in fbi_weight_dir:\n",
+    "        lambda_val = fbi_weight_dir.split(\"l1_on_img_gradient_\")[1].split(\"_\")[0]\n",
+    "        dataset_version += f\"_l1_on_img_gradient_{lambda_val}\"\n",
+    "    return target_x,target_y, dataset_version"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
