fix : fix some training_code error

--- a/training_code/data_preparation/validate_dataset.ipynb
+++ b/training_code/data_preparation/validate_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,56 +11,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./train_Samsung_SNU_patches_230414.hdf5',\n",
-       " './test_Samsung_SNU_patches_230414.hdf5']"
+       "['../train_Samsung_SNU_patches.hdf5', '../test_Samsung_SNU_patches.hdf5']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import glob\n",
-    "data_list = glob.glob('./*.hdf5')\n",
+    "data_list = glob.glob('../*.hdf5')\n",
     "data_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./train_Samsung_SNU_patches_230414.hdf5\n",
-      "<KeysViewHDF5 ['F01', 'F32']>\n",
-      "F01 (1060, 256, 256)\n",
-      "F32 (1060, 256, 256)\n",
-      "./test_Samsung_SNU_patches_230414.hdf5\n",
-      "<KeysViewHDF5 ['F01', 'F32']>\n",
-      "F01 (530, 256, 256)\n",
-      "F32 (530, 256, 256)\n"
+      "../train_Samsung_SNU_patches.hdf5\n",
+      "<KeysViewHDF5 ['F01', 'F02', 'F04', 'F08', 'F16', 'F32', 'F64']>\n",
+      "F01 (21600, 256, 256)\n",
+      "F02 (21600, 256, 256)\n",
+      "F04 (21600, 256, 256)\n",
+      "F08 (21600, 256, 256)\n",
+      "F16 (21600, 256, 256)\n",
+      "F32 (21600, 256, 256)\n",
+      "F64 (21600, 256, 256)\n",
+      "../test_Samsung_SNU_patches.hdf5\n",
+      "<KeysViewHDF5 ['F01', 'F02', 'F04', 'F08', 'F16', 'F32', 'F64']>\n",
+      "F01 (1440, 256, 256)\n",
+      "F02 (1440, 256, 256)\n",
+      "F04 (1440, 256, 256)\n",
+      "F08 (1440, 256, 256)\n",
+      "F16 (1440, 256, 256)\n",
+      "F32 (1440, 256, 256)\n",
+      "F64 (1440, 256, 256)\n"
      ]
     }
    ],
    "source": [
-    "for data in data_list:\n",
-    "    print(data)\n",
-    "    with h5py.File(data, 'r') as f:\n",
+    "import h5py\n",
+    "for file in data_list:\n",
+    "    print(file)\n",
+    "    with h5py.File(file,'r') as f:\n",
     "        print(f.keys())\n",
     "        for key in f.keys():\n",
     "            print(key,f[key].shape)\n",
-    "        # print(f['data'].shape)\n",
-    "        # print(f['label'].shape)"
+    "        "
    ]
   },
   {
